--- a/src/style/global.less
+++ b/src/style/global.less
@@ -6,3 +6,6 @@ html, div, span, pre, section, article {
   font-family: 'Microsoft YaHei', 'SimHei', 'PMingLiU', Helvetica, Arial, sans-serif;
 }
 
+body {
+  background: #eee;
+}
